      _local_remote_pairs=[tuples].  This complements a complex
      primaryjoin condition allowing you to provide the
      individual column pairs which comprise the relation's
      local and remote sides.  Also improved lazy load SQL
      generation to handle placing bind params inside of
      functions and other expressions.  (partial progress
      towards [ticket:610])

    - Removed an ancient assertion that mapped selectables
      require "alias names" - the mapper creates its own alias
      now if none is present.  Though in this case you need to
      use the class, not the mapped selectable, as the source of
      column attributes - so a warning is still issued.

    - Fixes to the "exists" function involving inheritance
      (any(), has(), ~contains()); the full target join will be
      rendered into the EXISTS clause for relations that link to
      subclasses.

    - Restored usage of append_result() extension method for
      primary query rows, when the extension is present and only
      a single- entity result is being returned.

    - Fixed Class.collection==None for m2m relationships
      [ticket:4213]

    - Refined mapper._save_obj() which was unnecessarily calling
      __ne__() on scalar values during flush [ticket:1015]

    - Added a feature to eager loading whereby subqueries set as
      column_property() with explicit label names (which is not
      necessary, btw) will have the label anonymized when the
      instance is part of the eager join, to prevent conflicts
      with a subquery or column of the same name on the parent
      object.  [ticket:1019]

    - Same as [ticket:1019] but repaired the non-labeled use
      case [ticket:1022]

    - Adjusted class-member inspection during attribute and
      collection instrumentation that could be problematic when
      integrating with other frameworks.

    - Fixed duplicate append event emission on repeated
      instrumented set.add() operations.
